@@ -63,8 +63,13 @@ export ORIG_GIT_TEMPLATE_DIR
 GIT_TEMPLATE_DIR="$base/templates"
 export GIT_TEMPLATE_DIR
 
+ORIG_MANPATH="$MANPATH"
+export ORIG_MANPATH
+MANPATH="$base/usr/share/man:$MANPATH"
+export MANPATH
+
 # Indicate which variables were exported above.
-GIT_ANNEX_STANDLONE_ENV="PATH LD_LIBRARY_PATH GIT_EXEC_PATH GIT_TEMPLATE_DIR"
+GIT_ANNEX_STANDLONE_ENV="PATH LD_LIBRARY_PATH GIT_EXEC_PATH GIT_TEMPLATE_DIR MANPATH"
 export GIT_ANNEX_STANDLONE_ENV
 
 if [ "$1" ]; then
